# action-format

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  seal.toml  zensical.toml
.github/: CODE_OF_CONDUCT.md  action-format.toml  codecov.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yml  release.yml
crates/action-format/: Cargo.toml
crates/action-format-cli/: Cargo.toml
crates/action-format-cli/src/: lib.rs
crates/action-format-core/: Cargo.toml
crates/action-format-core/src/: config.rs  formatter.rs  lib.rs  parser.rs
crates/action-format/src/: main.rs  printer.rs
crates/action-format/tests/it/: .format.rs.pending-snap  format.rs  main.rs
crates/action-format/tests/it/common/: mod.rs
docs/: configuration.md  index.md
