[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
homepage = "https://github.com/MatthewMckee4/action-format"
repository = "https://github.com/MatthewMckee4/action-format"
authors = ["Matthew McKee <matthewmckee4@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
action-format-cli = { path = "crates/action-format-cli" }
action-format-core = { path = "crates/action-format-core" }

anstream = "0.6"
anyhow = "1.0"
assert_cmd = "2.1"
assert_fs = "1.1"
clap = { version = "4.5", features = ["derive", "env", "string", "wrap_help"] }
fs-err = "3.2"
insta = { version = "1.44", features = ["filters"] }
owo-colors = "4.2"
regex = "1.12"
similar = { version = "2.7", features = ["inline"] }
tempfile = "3.23"
terminal_size = "0.4"
thiserror = "2.0"
walkdir = "2.5"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
if_not_else = "allow"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
use_self = "warn"

[profile.dist]
inherits = "release"
lto = "thin"
