[package]
name = "action-format-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI argument parsing for action-format"

[dependencies]
anstream = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
