[package]
name = "action-format-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "Core formatting logic for action-format"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
