[package]
name = "action-format"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "A fast GitHub Actions workflow formatter"
default-run = "action-format"

[[bin]]
name = "action-format"
path = "src/main.rs"

[dependencies]
action-format-core = { workspace = true }
action-format-cli = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
anstream = { workspace = true }
owo-colors = { workspace = true }
fs-err = { workspace = true }
walkdir = { workspace = true }
similar = { workspace = true }
terminal_size = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
